New Peoject Screen Diseño v1.1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CollApp">
+        <activity android:name=".PopupNewStage"></activity>
+        <activity android:name=".PopupNewStatus" />
+        <activity
+            android:name=".New_Project"
+            android:label="@string/title_activity_new_project" />
+        <activity android:name=".stages" />
+        <activity android:name=".activity_newProject" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
