--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CollApp">
-        <activity android:name=".project_detail"></activity>
+        <activity android:name=".Project_Detail_Fragment"></activity>
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home" />
-        <activity android:name=".Register" />
-        <activity android:name=".Login" />
+        <activity android:name=".RegisterActivity" />
+        <activity android:name=".LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
