Se combino todos las pantallas, solo falta poder abrir otros "Fragments".

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CollApp">
-        <activity android:name=".Project_Detail_Fragment"></activity>
+       <!-- <activity android:name=".ProjectDetailFragment"></activity>-->
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home" />
