--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CollApp">
-       <!-- <activity android:name=".ProjectDetailFragment"></activity>-->
+        <activity android:name=".NewProjectImageActivity"></activity>
+        <activity android:name=".ProjectDetailActivity" />
+        <activity android:name=".NewProjectActivity" /> <!-- <activity android:name=".ProjectDetailFragment"></activity> -->
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home" />
