--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CollApp">
-        <activity android:name=".NewProjectImageActivity"></activity>
+        <activity android:name=".CustomDialog_NewStage"></activity>
+        <activity android:name=".NewProjectImageActivity" />
         <activity android:name=".ProjectDetailActivity" />
         <activity android:name=".NewProjectActivity" /> <!-- <activity android:name=".ProjectDetailFragment"></activity> -->
         <activity
