--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,14 @@
     package="VEM.Movil.collapp">
 
     <application
+        android:fullBackupContent="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CollApp">
-        <activity android:name=".CustomDialog_NewStage"></activity>
         <activity android:name=".NewProjectImageActivity" >
-
         </activity>
         <activity android:name=".ProjectDetailActivity" />
         <activity android:name=".NewProjectActivity" /> <!-- <activity android:name=".ProjectDetailFragment"></activity> -->
